--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
     min-height: 100vh;
     overflow-x: hidden;
   }
+  img{
+  margin-top: 10px;
+  margin-bottom: 10px; 
+  width: 400px; 
+  height: 400px;
+  width: 100%;
+}
   .container {
     max-width: 700px;
     width: 90%;
@@ -287,4 +294,5 @@ function showResult() {
 </script>
 
 </body>
+
 </html>
