--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
 <div class="container active" id="start-screen">
   <h1>🎓 Пройди тест по экономике!</h1>
-  <img src="https://cdn.pixabay.com/photo/2017/08/31/11/55/piggy-bank-2702102_1280.jpg" alt="Экономика тест">
+  <img src="C:\Users\urubk\OneDrive\Рабочий стол\сайт по экономике\133919.jpg" alt="Экономика тест">
   <button onclick="startTest()">Начать тест</button>
 </div>
 
@@ -169,7 +169,7 @@
 <div class="container hidden" id="result-screen">
   <h2>🎉 Твой результат:</h2>
   <p id="score-text"></p>
-  <img src="https://cdn.pixabay.com/photo/2020/03/31/19/10/cute-4987171_1280.png" alt="Поздравляем!">
+  <img src="C:\Users\urubk\OneDrive\Рабочий стол\сайт по экономике\133738.jpg" alt="Поздравляем!">
   <button onclick="location.reload()">Пройти снова</button>
 </div>
 
@@ -296,3 +296,4 @@ function showResult() {
 </body>
 
 </html>
+
