--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
 <div class="container active" id="start-screen">
   <h1>🎓 Пройди тест по экономике!</h1>
-  <img src="C:\Users\urubk\OneDrive\Рабочий стол\сайт по экономике\133919.jpg" alt="Экономика тест">
+  <img src="133919.jpg" alt="Экономика тест">
   <button onclick="startTest()">Начать тест</button>
 </div>
 
@@ -169,7 +169,7 @@
 <div class="container hidden" id="result-screen">
   <h2>🎉 Твой результат:</h2>
   <p id="score-text"></p>
-  <img src="C:\Users\urubk\OneDrive\Рабочий стол\сайт по экономике\133738.jpg" alt="Поздравляем!">
+  <img src="133738.jpg" alt="Поздравляем!">
   <button onclick="location.reload()">Пройти снова</button>
 </div>
 
@@ -296,4 +296,5 @@ function showResult() {
 </body>
 
 </html>
+
 
