--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
 <body>
     <nav class="navbar">
         <div class="nav-container">
-            <div class="logo">
-                <span class="logo-icon">💰</span>
-                Семейный бюджет
-            </div>
             <ul class="nav-menu">
                 <li><a href="index.html" class="active">Главная</a></li>
                 <li><a href="theory.html">Основы бюджета</a></li>
@@ -41,27 +37,12 @@
                     <span>🎓 Образовательный проект</span>
                 </div>
                 <h1 class="hero-title">
-                    <span class="title-main">Финансовая грамотность</span>
-                    <span class="title-sub">Семейный бюджет</span>
+                    <span class="title-main">Семейный бюджет/span>
                 </h1>
                 <p class="hero-description">
                     Научитесь управлять семейными финансами как профессионал. 
                     Практические инструменты и игры для эффективного планирования бюджета.
                 </p>
-                <div class="hero-stats">
-                    <div class="stat">
-                        <div class="stat-number">4</div>
-                        <div class="stat-label">Обучающие игры</div>
-                    </div>
-                    <div class="stat">
-                        <div class="stat-number">50+</div>
-                        <div class="stat-label">Практических задач</div>
-                    </div>
-                    <div class="stat">
-                        <div class="stat-number">100%</div>
-                        <div class="stat-label">Полезные навыки</div>
-                    </div>
-                </div>
                 <div class="hero-buttons">
                     <a href="#features" class="btn btn-primary">
                         <span class="btn-icon">🎯</span>
