--- a/about.html
+++ b/about.html
@@ -10,6 +10,9 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="logo">
+                <span class="logo-icon">💰</span>
+                Семейный бюджет
+            </div>
             </div>
             <ul class="nav-menu">
                 <li><a href="index.html">Главная</a></li>
