--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
     <nav class="navbar">
         <div class="nav-container">
+             <div class="logo">
+                <span class="logo-icon">💰</span>
+                Семейный бюджет
+            </div>
             <ul class="nav-menu">
                 <li><a href="index.html" class="active">Главная</a></li>
                 <li><a href="theory.html">Основы бюджета</a></li>
