--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 Семейный бюджет
             </div>
             <ul class="nav-menu">
-                <li><a href="theory.html" class="active">Основы бюджета</a></li>
+                <li><a href="index.html" class="active">Основы бюджета</a></li>
                 <li><a href="games.html">Игры</a></li>
                 <li><a href="about.html">О проекте</a></li>
             </ul>
@@ -904,7 +904,7 @@
                 <div class="footer-section">
                     <h4>Навигация</h4>
                     <ul class="footer-links">
-                        <li><a href="theory.html">Основы бюджета</a></li>
+                        <li><a href="index.html">Основы бюджета</a></li>
                         <li><a href="games.html">Игры</a></li>
                         <li><a href="about.html">О проекте</a></li>
                     </ul>
