--- a/about.html
+++ b/about.html
@@ -13,9 +13,9 @@
                 <span class="logo-icon">💰</span>
                 Семейный бюджет
             </div>
-            </div>
             <ul class="nav-menu">
-                <li><a href="index.html">Основы бюджета</a></li>
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="theory.html">Основы бюджета</a></li>
                 <li><a href="games.html">Игры</a></li>
                 <li><a href="about.html" class="active">О проекте</a></li>
             </ul>
@@ -287,7 +287,8 @@
                 <div class="footer-section">
                     <h4>Навигация</h4>
                     <ul class="footer-links">
-                        <li><a href="index.html">Основы бюджета</a></li>
+                        <li><a href="index.html">Главная</a></li>
+                        <li><a href="theory.html">Основы бюджета</a></li>
                         <li><a href="games.html">Игры</a></li>
                         <li><a href="about.html">О проекте</a></li>
                     </ul>
