--- a/games.html
+++ b/games.html
@@ -9,12 +9,13 @@
 <body>
     <nav class="navbar">
         <div class="nav-container">
-             <div class="logo">
+            <div class="logo">
                 <span class="logo-icon">💰</span>
                 Семейный бюджет
             </div>
             <ul class="nav-menu">
-                <li><a href="index.html">Основы бюджета</a></li>
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="theory.html">Основы бюджета</a></li>
                 <li><a href="games.html" class="active">Игры</a></li>
                 <li><a href="about.html">О проекте</a></li>
             </ul>
@@ -509,7 +510,8 @@
                 <div class="footer-section">
                     <h4>Навигация</h4>
                     <ul class="footer-links">
-                        <li><a href="index.html">Основы бюджета</a></li>
+                        <li><a href="index.html">Главная</a></li>
+                        <li><a href="theory.html">Основы бюджета</a></li>
                         <li><a href="games.html">Игры</a></li>
                         <li><a href="about.html">О проекте</a></li>
                     </ul>
