--- a/games.html
+++ b/games.html
@@ -11,7 +11,7 @@
         <div class="nav-container">
             <div class="logo">
                 <span class="logo-icon">💰</span>
-                Семейный бюджет
+                Лаборатория финансовых знании
             </div>
             <ul class="nav-menu">
                 <li><a href="index.html">Главная</a></li>
