--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="logo">
-                <span class="logo-icon">💰</span>
+                <span class="logo-icon">
+                    <img scr="Airbrush-Image-Enhancer-1761651709644.jpg">
+                </span>
                 Лаборатория финансовых знании
             </div>
             <ul class="nav-menu">
