--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="nav-container">
             <div class="logo">
                 <span class="logo-icon">
-                    <img scr="Airbrush-Image-Enhancer-1761651709644.jpg">
+                    <img src="Airbrush-Image-Enhancer-1761651709644.jpg">
                 </span>
                 Лаборатория финансовых знании
             </div>
