--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <span class="logo-icon">
                     <img src="Airbrush-Image-Enhancer-1761651709644.jpg">
                 </span>
-                Лаборатория финансовых знании
+                 <span class="logo-text">Лаборатория финансовых знаний</span>
             </div>
             <ul class="nav-menu">
                 <li><a href="index.html" class="active">Главная</a></li>
