--- a/games.html
+++ b/games.html
@@ -10,8 +10,10 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="logo">
-                <span class="logo-icon">💰</span>
-                Лаборатория финансовых знании
+                <span class="logo-icon">
+                    <img src="Airbrush-Image-Enhancer-1761651709644.jpg">
+                </span>
+                 <span class="logo-text">Лаборатория финансовых знаний</span>
             </div>
             <ul class="nav-menu">
                 <li><a href="index.html">Главная</a></li>
