--- a/theory.html
+++ b/theory.html
@@ -11,7 +11,7 @@
         <div class="nav-container">
             <div class="logo">
                 <span class="logo-icon">
-                    <img src="Airbrush-Image-Enhancer-1761651709644.jpg">
+                    <img src="Airbrush-Image-Enhancer-1761651709644.png">
                 </span>
                  <span class="logo-text">Лаборатория финансовых знаний</span>
             </div>
